manifests/overlays/staging/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: observability-platform
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 768Mi
